# VisiX

./: .gitignore  CMakeLists.txt  README.md  VisiX.sln  main.cpp
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
UnitTest/: ShaderCompilationTest.cpp  UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
VisiX/: Attribute.cpp  Attribute.h  BaseEffect.cpp  BaseEffect.h  Buffer.h  Camera.cpp  Camera.h  DynamicSystem.cpp  DynamicSystem.h  EBO.cpp  EBO.h  GJK.cpp  GJK.h  GLObject.cpp  GLObject.h  Light.h  Mesh.cpp  Mesh.h  MeshFormat.cpp  MeshFormat.h  Node.cpp  Node.h  Point.h  Polytope.cpp  Polytope.h  Property.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  ShaderClass.cpp  ShaderClass.h  ShaderGenerator.cpp  ShaderGenerator.h  ShaderWriter.cpp  ShaderWriter.h  Solid.cpp  Solid.h  Texture.cpp  Texture.h  (+18 more)
include/: LeftTabWidget.h  MainWindow.hpp  QMLTreeSitter.h  QTreeSitter.h  SceneExplorer.h  ShapeCreationDialog.h
include/lib/glad/: glad.h
include/rendering/: Buffer.h  Camera.h  Drawer.h  EBO.h  GLObject.h  Light.h  Mesh.h  Movable.h  Node.h  Object.h  Particles.h  Renderable.h  Scene.h  ShaderClass.h  Texture.h  Uniform.h  VAO.h  Vertex.h  Viewer.h
libs/QCodeEditor/: CMakeLists.txt
libs/QCodeEditor/example/: CMakeLists.txt
libs/QCodeEditor/src/internal/: QCodeEditor.cpp  QLanguage.cpp  QSyntaxStyle.cpp
resources/: default.frag  default.vert  main.qrc  particle.frag  particle.vert
resources/compute_shaders/: lorenz.comp  orbiting.comp  particle.comp  sprott.comp  three_scroll.comp
resources/qml/: scene.qml
src/: LeftTabWidget.cpp  MainWindow.cpp  QMLTreeSitter.cpp  QTreeSitter.cpp  SceneExplorer.cpp  ShapeCreationDialog.cpp  main.cpp
src/lib/: glad.c
src/rendering/: Buffer.cpp  Camera.cpp  Drawer.cpp  EBO.cpp  Mesh.cpp  Node.cpp  Object.cpp  Particles.cpp  Renderable.cpp  Scene.cpp  ShaderClass.cpp  Texture.cpp  Uniform.cpp  VAO.cpp  Viewer.cpp
